--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,8 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/CANDProject1
 endorsed.classpath=
 excludes=
+file.reference.activation.jar=C:\\Users\\ADMIN\\Desktop\\activation.jar
+file.reference.javax.mail.jar=D:\\javax.mail.jar
 file.reference.jcalendar-1.2.2.jar=C:\\Users\\ADMIN\\Downloads\\jcalendar-1.2.2.jar
 file.reference.mysql-connector-java-5.1.49-bin.jar=C:\\Program Files (x86)\\MySQL\\Connector J 5.1\\mysql-connector-java-5.1.49-bin.jar
 file.reference.mysql-connector-java-8.0.23.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.23.jar
@@ -45,7 +47,9 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.23.jar}:\
     ${file.reference.rs2xml.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.jcalendar-1.2.2.jar}
+    ${file.reference.jcalendar-1.2.2.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.activation.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
